changed repo s structure

--- a/Task 1/task_1.ipynb
+++ b/Task 1/task_1.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:05.185916Z",
+     "start_time": "2023-05-29T18:08:51.103445Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -22,7 +26,11 @@
     "import own_PCA"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:05.194440Z",
+     "start_time": "2023-05-29T18:09:05.187203Z"
+    }
    }
   },
   {
@@ -59,7 +67,11 @@
     "array = np.array(array)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:05.206058Z",
+     "start_time": "2023-05-29T18:09:05.201871Z"
+    }
    }
   },
   {
@@ -70,7 +82,11 @@
     "center, centered_array, U, sigma, Sigma, Vh, energy, explained_variance = own_PCA.perform_PCA(array)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:05.257539Z",
+     "start_time": "2023-05-29T18:09:05.210895Z"
+    }
    }
   },
   {
@@ -114,7 +130,11 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:05.480324Z",
+     "start_time": "2023-05-29T18:09:05.229792Z"
+    }
    }
   },
   {
@@ -159,7 +179,11 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:05.616959Z",
+     "start_time": "2023-05-29T18:09:05.485821Z"
+    }
    }
   },
   {
@@ -205,7 +229,11 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:05.743951Z",
+     "start_time": "2023-05-29T18:09:05.631904Z"
+    }
    }
   },
   {
@@ -226,7 +254,11 @@
     "energy"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:05.755026Z",
+     "start_time": "2023-05-29T18:09:05.744559Z"
+    }
    }
   },
   {
@@ -247,7 +279,11 @@
     "explained_variance"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:05.757831Z",
+     "start_time": "2023-05-29T18:09:05.752894Z"
+    }
    }
   },
   {
@@ -290,7 +326,11 @@
     "image.shape"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:06.523986Z",
+     "start_time": "2023-05-29T18:09:05.758402Z"
+    }
    }
   },
   {
@@ -323,7 +363,11 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:06.525581Z",
+     "start_time": "2023-05-29T18:09:06.523404Z"
+    }
    }
   },
   {
@@ -335,7 +379,11 @@
     "image_center, image_centered, U, sigma, Sigma, Vh, energy, explained_variance = own_PCA.perform_PCA(image_resized)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:06.525806Z",
+     "start_time": "2023-05-29T18:09:06.525232Z"
+    }
    }
   },
   {
@@ -376,7 +424,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:06.651011Z",
+     "start_time": "2023-05-29T18:09:06.525418Z"
+    }
    }
   },
   {
@@ -417,7 +469,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:06.742123Z",
+     "start_time": "2023-05-29T18:09:06.581531Z"
+    }
    }
   },
   {
@@ -458,7 +514,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:06.920653Z",
+     "start_time": "2023-05-29T18:09:06.743349Z"
+    }
    }
   },
   {
@@ -499,7 +559,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:07.050352Z",
+     "start_time": "2023-05-29T18:09:06.898792Z"
+    }
    }
   },
   {
@@ -540,7 +604,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:07.212963Z",
+     "start_time": "2023-05-29T18:09:07.052805Z"
+    }
    }
   },
   {
@@ -581,7 +649,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:07.363872Z",
+     "start_time": "2023-05-29T18:09:07.206912Z"
+    }
    }
   },
   {
@@ -612,7 +684,11 @@
     "explained_variance"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:07.486148Z",
+     "start_time": "2023-05-29T18:09:07.363473Z"
+    }
    }
   },
   {
@@ -654,7 +730,11 @@
     "numbers"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:07.527681Z",
+     "start_time": "2023-05-29T18:09:07.488577Z"
+    }
    }
   },
   {
@@ -668,7 +748,11 @@
     "steps_of_2 = numbers[:, 2:4]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:07.528025Z",
+     "start_time": "2023-05-29T18:09:07.515083Z"
+    }
    }
   },
   {
@@ -693,7 +777,11 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:07.670575Z",
+     "start_time": "2023-05-29T18:09:07.531537Z"
+    }
    }
   },
   {
@@ -705,7 +793,11 @@
     "numbers_center, numbers_centered, U, sigma, Sigma, Vh, energy, explained_variance = own_PCA.perform_PCA(numbers)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:07.717473Z",
+     "start_time": "2023-05-29T18:09:07.669883Z"
+    }
    }
   },
   {
@@ -745,7 +837,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:08.070100Z",
+     "start_time": "2023-05-29T18:09:07.695118Z"
+    }
    }
   },
   {
@@ -785,7 +881,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:08.440284Z",
+     "start_time": "2023-05-29T18:09:08.074749Z"
+    }
    }
   },
   {
@@ -825,7 +925,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:08.883612Z",
+     "start_time": "2023-05-29T18:09:08.441766Z"
+    }
    }
   },
   {
@@ -865,7 +969,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:09.230386Z",
+     "start_time": "2023-05-29T18:09:08.861542Z"
+    }
    }
   },
   {
@@ -905,7 +1013,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:09.600185Z",
+     "start_time": "2023-05-29T18:09:09.232864Z"
+    }
    }
   },
   {
@@ -945,7 +1057,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:10.088201Z",
+     "start_time": "2023-05-29T18:09:09.603110Z"
+    }
    }
   },
   {
@@ -985,7 +1101,11 @@
     "print(explained_variance[a-1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:10.492600Z",
+     "start_time": "2023-05-29T18:09:10.092886Z"
+    }
    }
   },
   {
@@ -1016,7 +1136,11 @@
     "explained_variance"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T18:09:10.661003Z",
+     "start_time": "2023-05-29T18:09:10.502630Z"
+    }
    }
   }
  ],
